# simple-heateq

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  build.sh  cheat.cc  cheateq.pc.in  fheat.f08  fheateq.cmake.in  fheateq.pc.in  heat.cc  heateq.cmake.in
cmake/: install.cmake  rpath.cmake
example/: CMakeLists.txt  test.sh
include/: heat.hh.in
include/heateq/: energy.hpp  heat.hpp.in  params.hpp
src/: ArgParser.f90  EnergyField.f90  cheat.cpp  fheat.f90  pheat.py
tests/: CMakeLists.txt  includefile.cc  includefile.cpp
